Discover typos with codespell
https://github.com/codespell-project/codespell

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,10 +16,18 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.15
+        go-version: 1.17
 
     - name: Build
       run: go build -v ./...
 
     - name: Test
       run: go test -v ./...
+
+  codespell:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: codespell-project/actions-codespell@master
+        #with:
+        #  ignore_words_list: crate,raison
