--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,6 +1,11 @@
 name: Go
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+  workflow_dispatch:
 
 jobs:
 
