--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,5 +30,5 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: codespell-project/actions-codespell@master
-        #with:
-        #  ignore_words_list: crate,raison
+        with:
+          ignore_words_list: ibrary
